fix chevron position

--- a/src/components/Element/styles.css
+++ b/src/components/Element/styles.css
@@ -11,6 +11,10 @@
     margin: 2px 0 2px 20px;
 }
 
+.element_item_title_container {
+    position: relative;
+}
+
 .element_item_title {
     display: inline-block;
     padding: 5px;
@@ -21,6 +25,9 @@
 }
 
 .element_item_collapse {
+    position: absolute;
+    left: -17px;
+    top: 4px;
     cursor: pointer;
 }
 
